# pysec2pri

./: .cruft.json  .gitignore  .gitlab-ci.yml  .readthedocs.yml  CITATION.cff  LICENSE  README.md  justfile  pyproject.toml  test_data_generation.sh  tox.ini  wikidata.tsv
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: create-release.yml  cruft.yml  test-mappings.yml  tests.yml  update-chebi.yml  update-mappings.yml
config/: chebi.yaml  hgnc.yaml  hmdb.yaml  ncbi.yaml  uniprot.yaml  wikidata.yaml
docs/source/: api.rst  cli.rst  conf.py  constants.rst  diff.rst  download.rst  exports.rst  index.rst  installation.rst  models.rst  parsers.rst  update_ids.rst  usage.rst  wikidata.rst
src/pysec2pri/: __init__.py  __main__.py  api.py  cli.py  consolidate.py  constants.py  context.py  diff.py  download.py  exports.py  logging.py  models.py  update_ids.py  version.py  xref.py
src/pysec2pri/config/: __init__.py  chebi.yaml  chebi_sdf.yaml  ensembl.yaml  hgnc.yaml  hmdb.yaml  hmdb_metabolites.yaml  hmdb_proteins.yaml  ncbi.yaml  schema.py  uniprot.yaml  vgnc.yaml  wikidata.yaml
src/pysec2pri/downloads/: __init__.py  chebi.py  ensembl.py  hgnc.py  hmdb.py  ncbi.py  uniprot.py
src/pysec2pri/parsers/: __init__.py  base.py  chebi.py  ensembl.py  hgnc.py  hmdb.py  ncbi.py  uniprot.py  vgnc.py  wikidata.py
src/pysec2pri/queries/: __init__.py  chemical_redirects_test.rq  gene_redirects_test.rq  protein_redirects.rq  protein_redirects_test.rq
tests/: __init__.py  test_cli.py  test_config.py  test_consolidate.py  test_context.py  test_diff.py  test_download.py  test_exports.py  test_models.py  test_parsers.py  test_version.py
tests/data/: fake_delac_sp.txt  fake_gene_info.tsv  fake_hgnc_complete.tsv  fake_hmdb_proteins.xml  fake_sec_ac.txt  fake_sssom_v1.tsv  fake_sssom_v2.tsv  mock_chebi.sdf  mock_chebi_compounds.tsv  mock_chebi_names.tsv  mock_ensembl_external_synonym.txt  mock_ensembl_gene.txt  mock_ensembl_mapping_session.txt  mock_ensembl_stable_id_event.txt  mock_ensembl_xref.txt  mock_gene_history.tsv  mock_hgnc_complete.tsv  mock_hgnc_withdrawn.tsv  mock_hmdb.xml  mock_sec_ac.txt  mock_vgnc_gene_set.tsv  mock_vgnc_withdrawn.tsv
